crates/stef-parser/tests/snapshots/parser__error@const_literal_bool.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "const VALUE: bool = truze;"
input_file: crates/stef-parser/tests/inputs/invalid/const_literal_bool.stef
---
stef::parse::const_def (https://docs.rs/stef-parser/0.1.0/stef_parser/error/struct.ParseConstError.html)

  × Failed to parse const declaration
  ├─▶ Failed to parse literal value
  ╰─▶ error Tag
   ╭────
 1 │ const VALUE: bool = truze;
   · ─────────────┬────────────
   ·              ╰── In this declaration
   ╰────
  help: Expected const declaration in the form `❬B❭const <NAME>: <type> = <literal>;❬B❭`

Error: stef::parse::literal (https://docs.rs/stef-parser/0.1.0/stef_parser/error/struct.ParseLiteralError.html)

  × Failed to parse literal value
  ╰─▶ error Tag
   ╭────
 1 │ const VALUE: bool = truze;
   ·                     ▲
   ·                     ╰── In this declaration
   ╰────
  help: Expected literal value declaration in either of the forms:
        `❬B❭true❬B❭` or `❬B❭false❬B❭` for booleans
        `❬B❭1, 2, 3, ...❬B❭` for numbers
        `❬B❭1.2, 1.0e5, ...❬B❭` for floating point numbers
        `❬B❭"..."❬B❭` for strings
        or `❬B❭[...]❬B❭` for bytes

Error:   × error Tag

